Reorganize browser-tests and enhance makefile

--- a/browser-test/test.html
+++ b/browser-test/test.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title>XML Shim Test Suite</title>
-    <link rel="stylesheet" href="nodeunit/nodeunit.css" type="text/css" />
-    <script src="nodeunit/nodeunit.js"></script>
+    <link rel="stylesheet" href="nodeunit.css" type="text/css" />
+    <script src="nodeunit.js"></script>
     <script src="xmlshim-test.js"></script>
   </head>
   <body>
